# booking-api-demo

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
alembic/: env.py
alembic/versions/: 6430a5cd51fb_baseline_existing_schema.py  e04cc00a16da_add_offices_table_and_handling_office_.py
app/: main.py
app/core/: config.py
app/db/: init_db.py  session.py
app/models/: __init__.py  booking.py  container.py  office.py  vessel.py  voyage.py
app/repositories/: booking_repository.py  booking_workload_repository.py
app/routers/: booking_router.py  office_router.py
app/schemas/: __init__.py  booking.py  booking_workload.py
app/services/: booking_service.py  booking_workload_service.py
seed_data/: seed_booking_api.sql  seed_booking_workload.sql
tests/services/: test_booking_service.py  test_booking_workload_service.py
